# WordBattleGame/Models/RefreshTokenRequestDto.cs
@@ -1,7 +1,0 @@
-namespace WordBattleGame.Models
-{
-    public class RefreshTokenRequestDto
-    {
-        public string RefreshToken { get; set; } = string.Empty;
-    }
-}
